--- a/asset/asset.css
+++ b/asset/asset.css
@@ -156,3 +156,152 @@ font-weight: 500;
 font-size: 16px;
 line-height: 24px;
 }
+#routine{
+  height: 70vh;
+  width: 90%;
+  margin: 10rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+
+}
+.happiness{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: space-between;
+}
+.happiness h2{
+font-family: 'Lora';
+font-style: normal;
+font-weight: 400;
+font-size: 64px;
+line-height: 82px;
+color: #220953;
+}
+.happiness p{
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+color: #4B3E65;
+
+}
+.happiness a{
+  text-decoration: none;
+  border: 2px solid white;
+  background: linear-gradient(73.19deg, #FF52AF 11.6%, #9F53FF 83.86%);
+  border-radius: 64px;
+  padding: 16px 28px;
+}
+#follow{
+  height: 70vh;
+  width: 90%;
+  margin: 10rem auto;
+ display: flex;
+ align-items: center;
+ justify-content: space-between; 
+}
+.anytime{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: space-between;
+}
+.anytime h2{
+  font-family: 'Lora';
+font-style: normal;
+font-weight: 400;
+font-size: 64px;
+line-height: 82px;
+color: #220953;
+}
+.anytime p {
+  font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+color: #4B3E65;
+}
+.vector{
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  background: linear-gradient(73.19deg, #FF52AF 11.6%, #9F53FF 83.86%);
+  border: 2px solid white;
+  border-radius: 64px;
+  padding: 16px 28px;
+  width: fit-content;
+
+}
+.vector a{
+   text-decoration: none;
+}
+.im{
+  width: 580px;
+}
+.news{
+height: 70vh;
+  width: 90%;
+  margin: 10rem auto;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+
+}
+.join{
+  width: 992px;
+height: 374px;
+background: linear-gradient(73.19deg, #FF52AF 11.6%, #9F53FF 83.86%);
+border-radius: 32px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
+ gap: 1.5rem;
+}
+.join h2{
+  font-family: 'Lora';
+font-style: normal;
+font-weight: 400;
+font-size: 56px;
+line-height: 72px;
+text-align: center;
+color: #FFFFFF;
+}
+.join p:not(.sub){
+  font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 22px;
+text-align: center;
+color: #FFFFFF;
+}
+.sub{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px solid white;
+  background-color: green;
+  border-radius: 48px;
+  max-width: 500px;
+  padding-inline-start: 50px;
+  padding-inline-end: 10px;
+  padding-block: 10px;
+  gap: 5rem;
+  
+}
+.img-a{
+   background: linear-gradient(73.19deg, #FF52AF 11.6%, #9F53FF 83.86%);
+  border: 2px solid white;
+  border-radius: 64px;
+  padding: 16px 28px;
+  width: fit-content;
+  
+}
+.img-a a{
+  text-decoration: none;
+  color: white;
+
+}
