--- a/asset/asset.css
+++ b/asset/asset.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
@@ -270,38 +271,75 @@ line-height: 72px;
 text-align: center;
 color: #FFFFFF;
 }
-.join p:not(.sub){
+.join p:not(.para2){
   font-style: normal;
 font-weight: 400;
 font-size: 15px;
 line-height: 22px;
 text-align: center;
-color: #FFFFFF;
+max-width: 400px;
+text-align: center;
+color: white;
 }
 .sub{
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 2px solid white;
-  background-color: green;
+  background-color: white;
   border-radius: 48px;
   max-width: 500px;
   padding-inline-start: 50px;
   padding-inline-end: 10px;
-  padding-block: 10px;
+  padding-block: 5px;
   gap: 5rem;
   
 }
+.sub p{
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 20px;
+color: #a197b4 !important;
+}
 .img-a{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
    background: linear-gradient(73.19deg, #FF52AF 11.6%, #9F53FF 83.86%);
   border: 2px solid white;
   border-radius: 64px;
-  padding: 16px 28px;
+  padding: 12px 28px;
   width: fit-content;
+  
   
 }
 .img-a a{
   text-decoration: none;
   color: white;
 
+}
+.foot{
+  width: 100%;
+/* height: 391px; */
+background: #1E0849;
+}
+.all{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 5rem ;
+  color: #f5f0ff;
+  background-color: red;
+}
+.yoga-first{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+p{
+  font-family: 'Poppins', sans-serif !important;
+  color: #A197B4 !important;
 }
